# rustywx

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  .trivy.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  Justfile  README.md  SECURITY.md  USER_GUIDE.md  deny.toml  justfile  release-please-config.json  typos.toml
.github/workflows/: ci.yml  release-build.yml  release-please.yml
app/: CHANGELOG.md  Cargo.toml
app/assets/fonts/: README.md
app/assets/shaders/: blur.frag
app/benches/: rasterize.rs
app/examples/: gpu_palette_check.rs
app/src/: alerts.rs  cache.rs  cities.rs  colors.rs  data.rs  dealias.rs  demo.rs  forecast.rs  kdp.rs  lib.rs  location.rs  main.rs  melting_layer.rs  model.rs  nhc.rs  nonmet.rs  rle.rs  scope.rs  settings.rs  state.rs  system_location.rs
app/src/widgets/: collapsing.rs  dropdown.rs  glass_panel.rs  mod.rs  settings.rs  shortcuts.rs  toast.rs  toggle.rs
docs/: USER_GUIDE.md  Volumetric_Visualization_Of_NEXRAD_Level_II_Doppler_WeatherVolumetric_Visualization_Of_NEXRAD_Level_II_Doppler_Weather.md  cors-quick-reference.md  de-risking-plan.md  de-risking-report.md  fuzzy-nonmet-classifier-plan.md  notes.md  observatory-mockup.html  ply-port-plan.md  post-v1-multi-site-animation.md  qc-and-derived-products-plan.md  radar-easy-tier-plan.md  radar-image-improvements-backlog.md  radar-per-tilt-geometry-plan.md  stage-8-manual-validation.md  velocity-dealiasing-plan.md
docs/plans/: alert-labels.md  dualpol-products-and-cc-gating.md  topbar-menu-toggle-split.md
docs/ply-issues/: 01-ttf-parser-unmaintained.md  02-builtin-blur-shader.md  03-text-input-widget.md  04-shader-glsl-version-docs.md  05-shader-auto-uniforms-undocumented.md  06-net-same-id-behavior-undocumented.md  07-net-auto-cleanup-undocumented.md  08-headless-testing-mode.md  09-dropdown-widget.md  10-scrollable-list-container.md  11-color-i32-overflow.md  12-storage-new-signature-docs.md  13-borderless-window-conf.md  README.md
docs/research/: 0600361.md  1-s2.0-S1674283425000911-mmc1.md  1.md  2-5_Hands-on_training_on_weather_radar_QC.md  2012-EJ9.md  2021_fmh11_parta.md  FMH11D-2006.md  French_ou_0169D_10780.md  HTC_Addendum.md  Handler-finalpaper.md  Honors_Thesis.md  Investigating_the_outer_spiral_tornado_mechanism_in_Typhoon_Mujigae.md  MWR-D-24-0176.1.md  Severe_Weather_101_Tornado_Detection.md  Spatial_and_Temporal_Characteristics_of_Polarimetric_Tornadic_Debris_Signatures.md  TornadoDebrisSignatureWhitepaper_3.27.13.md  TornadoDetection.md  Understanding_basic_tornadic_radar_signatures-ustornadoes.com.md  Volumetric_Visualization_Of_NEXRAD_Level_II_Doppler_WeatherVolumetric_Visualization_Of_NEXRAD_Level_II_Doppler_Weather.md  Weatherradardatavisualizationusingfirst-orderinterpolation.md  atmosphere-12-00581.md  atot-JTECH-D-22-0141.1.md  atot-JTECH-D-25-0059.1.md  atsc-JAS-D-20-0320.1.md  bams-d-15-00266.1.md  distribution-strategy.md  document.md  fmh-11B-2005.md  fmh11partC.md  linux-packaging.md  macos-packaging.md  noaa_32142_DS1.md  noaa_67666_DS1.md  remotesensing-18-00827-with-cover.md  vol6-5.md  wefo-waf-d-11-00158_1.md  windows-packaging.md
docs/stages/: stage-1-hello-radar.md  (+7 more)
ply-spike/: Cargo.toml
ply-spike/assets/: cities.geojson
ply-spike/src/: borders.rs  cache.rs  cities.rs  colors.rs  data.rs  geo.rs  lib.rs  main.rs  model.rs  nhc.rs  rle.rs  scope.rs  settings.rs  state.rs
ply-spike/src/widgets/: collapsing.rs  dropdown.rs  glass_panel.rs  mod.rs  settings.rs  shortcuts.rs  toast.rs  toggle.rs
research/: SUMMARY.md  cors-wasm-feasibility.md  macroquad-async-http.md  nexrad-data-analysis.md  ply-api-surface.md  spike-s1-report.md  spike-s2-report.md  spike-s3-report.md  spike-s4-s5-s6-report.md  spike-s8-storage-async.md
src/: alerts.rs  app.rs  borders.rs  cache.rs  colors.rs  data.rs  geo.rs  lib.rs  logger.rs  main.rs  model.rs  nhc.rs  scope.rs  store.rs
tests/: borders_network.rs  network.rs
(+11 files in other folders)
