[package]
name = "rustywx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
eframe = "0.35"
egui = "0.35"
nexrad-data = "1.0.0-rc.7"
nexrad-model = "1.0.0-rc.2"
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
