[package]
name = "rustywx"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[dependencies]
ply-engine = { version = "1.1", features = ["net", "net-json", "storage", "built-in-shaders", "text-styling"] }
nexrad-data = "=1.0.0-rc.7"
nexrad-model = "=1.0.0-rc.2"
tokio = { version = "1", features = ["rt", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
webbrowser = "0.8"
zip = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rasterize"
harness = false
