[package]
name = "ply-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
ply-engine = { version = "1.1", features = ["net", "net-json", "storage"] }
nexrad-data = "=1.0.0-rc.7"
nexrad-model = "=1.0.0-rc.2"
tokio = { version = "1", features = ["rt", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
